# AgentOps_ShadowEval

./: .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
backend/: .env.example  .env.test  Dockerfile  api.py  config.py  database.py  logging_config.py  personas.py  pyproject.toml  requirements-dev.txt  requirements.txt  tools.py  tracker.py  traffic_engine.py  validator.py
backend/tests/: conftest.py  test_tools.py  test_tracker.py  test_validator.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  LiveFeed.tsx  MetricsChart.tsx  PersonaForm.tsx  ResultsTable.tsx  StatCard.tsx  Toast.tsx
frontend/src/hooks/: useToast.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  format.ts
